# Trading_2.0

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  Архитектурный документ для торгового робота на Московской бирже по акциям SBER и GAZP.docx  Исследование системы логирования и аналитики для торгового робота на MOEX с готовыми промптами для C.docx  ПРОМТЫ И ОТВЕТЫ СОЗДАНИЯ РОБОТА.docx  Пошаговый план и промпты для Codex по сборке торгового робота для MOEX.docx
Docs/: README.md  api-contract.md  architecture.md  broker-gateway.md  controlled-launch.md  database-schema.md  frontend-dashboard-spec.md  historical-candle-backfill.md  implementation-plan.md  live-analytics-bff.md  logging-analytics-spec.md  logging_analytics_acceptance.md  logging_analytics_architecture.md  logging_analytics_event_taxonomy.md  logging_analytics_rollout_plan.md  logging_analytics_schema.md  market-data-pipeline.md  observability_runbook.md  session-manager.md  strategy-risk-execution.md
scripts/: check.py  run_api_route_smoke.py  run_backfill_exchange_ts_fields.py  run_broker_balance_refresh.py  run_calibration_observatory.py  run_calibration_report.py  run_candle_feature_research.py  run_controlled_launch_acceptance.py  run_corporate_actions_import.py  run_counterfactual.py  run_daily_report.py  run_daily_trend_calibration_analysis.py  run_dashboard_live_feed_acceptance.py  run_data_only_day_quality_audit.py  run_data_only_full_day_lifecycle_check.py  run_data_only_shadow_smoke.py  (+29 more)
(+223 files in other folders)
